# rust-playground

./: README.md
web-notes/: .gitignore  Cargo.toml  README.md
web-notes/migrations/2020-08-15-191815_create_note/: up.sql
web-notes/src/: actions.rs  main.rs  models.rs  schema.rs  service.rs
web-notes/src/repository/: notes.rs
web-notes/templates/: index.html.twig  layout.html.twig  user.html.twig
