[package]
name = "rust-playground"
version = "0.1.0"
authors = ["azjezz <azjezz@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.7"
tera = "1.0"
actix-http = "1.0.1"
actix-web = "2.0.0"
actix-rt = "1.0.0"
actix-files = "0.2.2"
bytes = "0.5"
diesel = { version = "^1.1.0", features = ["sqlite", "r2d2"] }
dotenv = "0.15"
futures = "0.3.1"
r2d2 = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
